--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "paths": {}
+    "paths": {
+      "@app/database": ["libs/database/src"],
+      "@app/database/*": ["libs/database/src/*"],
+      "@app/file-storage": ["libs/file-storage/src"],
+      "@app/file-storage/*": ["libs/file-storage/src/*"]
+    }
   }
 }
