--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@aws-sdk/client-dynamodb": "^3.584.0",
     "@aws-sdk/client-s3": "^3.583.0",
     "@aws-sdk/s3-request-presigner": "^3.587.0",
+    "@codegenie/serverless-express": "^4.14.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "aws-lambda": "^1.0.7",
     "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "htmlparser2": "^9.1.0",
@@ -39,6 +41,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/aws-lambda": "^8.10.138",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -46,6 +49,7 @@
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "copy-node-modules": "^1.1.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
